<?xml version="1.0"?>
<package>
  <name>reem_rgbd_launch</name>
  <version>0.0.1</version>
  <description>The reem_rgbd_launch package</description>

  <maintainer email="sam.pfeiffer@pal-robotics.com">Sammy Pfeiffer</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>openni2_launch</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>openni2_launch</run_depend>
  <run_depend>rospy</run_depend>


  <export>

  </export>
</package>
